--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -44,6 +46,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation "androidx.viewpager2:viewpager2:1.1.0-alpha01"
     implementation 'com.google.android.material:material:1.3.0-alpha01'
 
     def nav_version = "2.3.0-beta01"
@@ -77,6 +80,8 @@ dependencies {
     implementation "com.github.skydoves:whatif:1.0.4"
     implementation "com.github.skydoves:baserecyclerviewadapter:0.1.3"
     implementation "com.github.skydoves:sandwich:1.0.2"
+
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     implementation "com.jakewharton.timber:timber:4.7.1"
 }
