--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ android {
     buildFeatures{
         dataBinding = true
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
@@ -98,4 +101,6 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     implementation "com.jakewharton.timber:timber:4.7.1"
+
+    implementation 'com.cioccarellia:ksprefs:2.0.0'
 }
