--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dakusuno.dakusunogua">
     <uses-permission android:name="android.permission.INTERNET" />
+    <permission android:name="com.dakusuno.dakusunogua.provider.READ_DATABASE"  android:protectionLevel="normal" />
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -10,16 +11,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver android:name=".receiver.AlarmReceiver"
-            android:enabled="true"
-            android:exported="true"/>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--        Content Provider-->
+        <provider
+            android:authorities="com.dakusuno.dakusunogua.provider"
+            android:name=".provider.UserProvider"
+            android:multiprocess="true"
+            android:exported="true"
+            android:enabled="true"
+            android:permission="com.dakusuno.dakusunogua.provider.READ_WRITE"/>
+        <!--Widget-->
+        <receiver android:name=".view.widget.FavouriteWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_favourite_inf" />
+        </receiver>
+        <service
+            android:name=".view.widget.FavouriteService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <!--        Notif-->
+        <receiver android:name=".receiver.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true"/>
     </application>
-
 </manifest>
